// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-mixed-field Renders \`c-mixed-field\` with boolean type correctly 1`] = `
<div
  class="mixed-field"
>
  <select
    class="v-select mixed-field__type-selector"
    dense="dense"
    error-messages=""
    hide-details="hide-details"
    label="Mixed field with boolean type"
  >
    <option
      value="string"
    >
      
        string
      
    </option>
    <option
      value="number"
    >
      
        number
      
    </option>
    <option
      value="boolean"
    >
      
        boolean
      
    </option>
    <option
      value="null"
    >
      
        null
      
    </option>
    <option
      value="array"
    >
      
        array
      
    </option>
  </select>
  <div
    class="v-input v-input--selection-controls v-input--switch v-input--hide-details theme--light ma-0 ml-3 mixed-field__switch"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-input--selection-controls__input"
        >
          <input
            aria-checked="false"
            aria-label="false"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <div
            class="v-input--selection-controls__ripple"
          />
          <div
            class="v-input--switch__track theme--light"
          />
          <div
            class="v-input--switch__thumb theme--light"
          >
            <transition-stub
              mode="out-in"
              name="fab-transition"
            />
          </div>
        </div>
        <label
          aria-hidden="true"
          class="v-label theme--light"
          style="left: 0px; position: relative;"
        >
          false
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with boolean type correctly 2`] = `undefined`;

exports[`c-mixed-field Renders \`c-mixed-field\` with custom props correctly 1`] = `
<div
  class="mixed-field mixed-field__solo-inverted"
>
  <select
    class="v-select mixed-field__type-selector"
    dense="dense"
    disabled="disabled"
    error-messages="First error message,Second error message"
    flat="true"
    hide-details="hide-details"
    label="Mixed field label"
    solo-inverted="true"
  >
    <option
      value="string"
    >
      
        string
      
    </option>
    <option
      value="number"
    >
      
        number
      
    </option>
    <option
      value="boolean"
    >
      
        boolean
      
    </option>
  </select>
  <input
    class="v-text-field mixed-field__text"
    dense="true"
    disabled="disabled"
    errormessages="First error message,Second error message"
    flat="true"
    hidedetails="true"
    name="mixedFieldName"
    singleline="true"
    soloinverted="true"
    type="text"
  />
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with custom props correctly 2`] = `undefined`;

exports[`c-mixed-field Renders \`c-mixed-field\` with default props correctly 1`] = `
<div
  class="mixed-field"
>
  <select
    class="v-select mixed-field__type-selector"
    dense="dense"
    error-messages=""
    hide-details="hide-details"
  >
    <option
      value="string"
    >
      
        string
      
    </option>
    <option
      value="number"
    >
      
        number
      
    </option>
    <option
      value="boolean"
    >
      
        boolean
      
    </option>
    <option
      value="null"
    >
      
        null
      
    </option>
    <option
      value="array"
    >
      
        array
      
    </option>
  </select>
  <input
    class="v-text-field mixed-field__text"
    dense="true"
    errormessages=""
    singleline="true"
    type="text"
  />
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with default props correctly 2`] = `undefined`;

exports[`c-mixed-field Renders \`c-mixed-field\` with errors correctly 1`] = `
<div
  class="mixed-field"
>
  <select
    class="v-select mixed-field__type-selector"
    dense="dense"
    error-messages="First error message,Second error message"
    hide-details="hide-details"
  >
    <option
      value="string"
    >
      
        string
      
    </option>
    <option
      value="number"
    >
      
        number
      
    </option>
    <option
      value="boolean"
    >
      
        boolean
      
    </option>
    <option
      value="null"
    >
      
        null
      
    </option>
    <option
      value="array"
    >
      
        array
      
    </option>
  </select>
  <input
    class="v-text-field mixed-field__text"
    dense="true"
    errormessages="First error message,Second error message"
    singleline="true"
    type="text"
  />
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with errors correctly 2`] = `undefined`;

exports[`c-mixed-field Renders \`c-mixed-field\` with null type correctly 1`] = `
<div
  class="mixed-field"
>
  <select
    class="v-select mixed-field__type-selector"
    dense="dense"
    error-messages=""
    hide-details="hide-details"
    label="Mixed field with null type"
  >
    <option
      value="string"
    >
      
        string
      
    </option>
    <option
      value="number"
    >
      
        number
      
    </option>
    <option
      value="boolean"
    >
      
        boolean
      
    </option>
    <option
      value="null"
    >
      
        null
      
    </option>
    <option
      value="array"
    >
      
        array
      
    </option>
  </select>
  <input
    class="v-text-field mixed-field__text"
    disabled="disabled"
    errormessages=""
  />
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with null type correctly 2`] = `undefined`;

exports[`c-mixed-field Renders \`c-mixed-field\` with null type correctly 3`] = `
<div
  class="mixed-field"
>
  <select
    class="v-select mixed-field__type-selector"
    dense="dense"
    error-messages=""
    hide-details="hide-details"
    label="Mixed field with null type"
  >
    <option
      value="string"
    >
      
        string
      
    </option>
    <option
      value="number"
    >
      
        number
      
    </option>
    <option
      value="boolean"
    >
      
        boolean
      
    </option>
    <option
      value="null"
    >
      
        null
      
    </option>
    <option
      value="array"
    >
      
        array
      
    </option>
  </select>
  <c-array-mixed-field-stub
    class="ml-3"
    types="[object Object],[object Object],[object Object],[object Object]"
    values="0,1,,false,"
  />
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with null type correctly 4`] = `undefined`;

exports[`c-mixed-field Renders \`c-mixed-field\` with number type correctly 1`] = `
<div
  class="mixed-field"
>
  <select
    class="v-select mixed-field__type-selector"
    dense="dense"
    error-messages=""
    hide-details="hide-details"
    label="Mixed field with number type"
  >
    <option
      value="string"
    >
      
        string
      
    </option>
    <option
      value="number"
    >
      
        number
      
    </option>
    <option
      value="boolean"
    >
      
        boolean
      
    </option>
    <option
      value="null"
    >
      
        null
      
    </option>
    <option
      value="array"
    >
      
        array
      
    </option>
  </select>
  <input
    class="v-text-field mixed-field__text"
    dense="true"
    errormessages=""
    name="mixedFieldName"
    singleline="true"
    type="number"
  />
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with number type correctly 2`] = `undefined`;

exports[`c-mixed-field Renders \`c-mixed-field\` with string type and items correctly 1`] = `
<div
  class="mixed-field"
>
  <select
    class="v-select mixed-field__type-selector"
    dense="dense"
    error-messages=""
    hide-details="hide-details"
    label="Mixed field with boolean type"
  >
    <option
      value="string"
    >
      
        string
      
    </option>
    <option
      value="number"
    >
      
        number
      
    </option>
    <option
      value="boolean"
    >
      
        boolean
      
    </option>
    <option
      value="null"
    >
      
        null
      
    </option>
    <option
      value="array"
    >
      
        array
      
    </option>
  </select>
  <div
    class="v-input v-input--selection-controls v-input--switch v-input--hide-details theme--light ma-0 ml-3 mixed-field__switch"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-input--selection-controls__input"
        >
          <input
            aria-checked="false"
            aria-label="false"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <div
            class="v-input--selection-controls__ripple"
          />
          <div
            class="v-input--switch__track theme--light"
          />
          <div
            class="v-input--switch__thumb theme--light"
          >
            <transition-stub
              mode="out-in"
              name="fab-transition"
            />
          </div>
        </div>
        <label
          aria-hidden="true"
          class="v-label theme--light"
          style="left: 0px; position: relative;"
        >
          false
        </label>
      </div>
    </div>
  </div>
</div>
`;
